fj/src/test/resources/scope-paper/inh-cyclic1.expected
src/test/resources/scope-paper/inh-cyclic1.fj:2:1:error: superclass cycle from A
class A extends A {
^
