fj/src/test/resources/scope-paper/inh-cyclic1.fj
// inheritance/cyclic.spt:immediate inheritance cycle
class A extends A {
  A() { super(); }
}
